# GTLFOptimiser

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
source/: ImageOptimiser.cpp  ImageOptimiser.h  MeshOptimiser.cpp  MeshOptimiser.h  Optimiser.cpp  Optimiser.h  OptimiserDuplicate.cpp  OptimiserInvalid.cpp  OptimiserMesh.cpp  OptimiserRemove.cpp  OptimiserTexture.cpp  OptimiserUnused.cpp  Shared.cpp  Shared.h  SharedCGLTF.cpp  SharedCGltf.h  TextureLoad.cpp  TextureLoad.h  Version.h.in  cgltf.cpp  main.cpp  stb.cpp
